2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_iterate): Fix off-by-one
	error.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Remove inappropriate use of program_transform_name
	on grubdir and bootdir but allow explicit specification of those
	variables.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mknetdir.in (grub_prefix): Removed.
	(subdir): Use @bootdirname@ and @grubdirname@.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace PACKAGE_TARNAME with PACKAGE in pkglibdir and pkgdatadir.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES.in: Regenerated.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove improper use of program_transform_name on pkglibrootdir.

	* configure.ac (pkglibrootdir): Removed.
	(grub-mkimage): Replace PKGLIBROOTDIR with PKGLIBDIR.
	* util/grub-mkimage.c: Likewise.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (grub_print_message_indented_real): Fix a
	warning.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Use file identifier if no UUID is available
	or user explicitly prompted for it.

2012-02-27  Navdeep Parhar <nparhar@gmail.com>

	* grub-core/loader/i386/bsd.c (freebsd_zfsguid): New variable.
	(freebsd_get_zfs): New function.
	(grub_freebsd_boot): Pass zfs UUID.
	(grub_cmd_freebsd): Set zfs UUID.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common (platformdir): Base on pkglibdir and not
	pkglibrootdir.

2012-02-27  Mike Gilbert  <floppym@gentoo.org>

	Add configure flag to control libzfs integration.

	* configure.ac: Add AC_ARG_ENABLE(libzfs ...) and associated logic.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (insert_array): Choose the smallest
	device.
	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Reject too
	small devices.
